<resources>
    <string name="app_name">AndroidDelivery</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_address">Direcciones</string>
    <string name="action_add_address">Agregar Dirección</string>
    <string name="text_retirement">Retiro</string>
    <string name="text_delivery">Entrega</string>
    <string name="action_continue">Continuar</string>
    <string name="text_date_hint">dd/mm</string>
    <string name="text_hour_hint">hh:mm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">871055499717791</string>
    <string name="fb_login_protocol_scheme">fb871055499717791</string>
    <string name="text_facebook_login">Login con Facebook</string>
    <string name="text_facebook_logout">Cerrar Sesión de Facebook</string>
    <string name="message_cancel_login">El inicio de sesión ha sido cancelado</string>
    <string name="message_error_login">El inicio de sesión ha fallado</string>

</resources>
