<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.MainFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linearLayoutTitleLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/textViewTitleLocation"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/ic_location"
            android:text="@string/title_address"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTitleLocation">

        <Spinner
            android:id="@+id/spinnerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonAddAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/ic_more"
            android:text="@string/action_add_address"
            android:textAlignment="textStart"
            android:theme="@style/AppTheme.Button.ButtonWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAddress">

        <LinearLayout
            android:id="@+id/linearLayoutRetirement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitleRetirement"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@mipmap/ic_next"
                android:text="@string/text_retirement"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewDateRetirement"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/linearLayoutDateRetirement"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewDateRetirement"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingLeft="12dp"
                        android:paddingTop="12dp"
                        android:text="@string/text_date_hint" />

                    <ImageView
                        android:id="@+id/imageViewDateRetirement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        app:srcCompat="@mipmap/ic_spinner" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewHourRetirement"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/linearLayoutHourRetirement"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewHourRetirement"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingLeft="12dp"
                        android:paddingTop="12dp"
                        android:text="@string/text_hour_hint" />

                    <ImageView
                        android:id="@+id/imageViewHourRetirement"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        app:srcCompat="@mipmap/ic_spinner" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDelivery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDelivery"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@mipmap/ic_back"
                android:text="@string/text_delivery"
                android:textSize="18sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewDateDelivery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/linearLayoutDateDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewDateDelivery"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingLeft="12dp"
                        android:paddingTop="12dp"
                        android:text="@string/text_date_hint" />

                    <ImageView
                        android:id="@+id/imageViewDateDelivery"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        app:srcCompat="@mipmap/ic_spinner" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewHourDelivery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/linearLayoutHourDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewHourDelivery"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingLeft="12dp"
                        android:paddingTop="12dp"
                        android:text="@string/text_hour_hint" />

                    <ImageView
                        android:id="@+id/imageViewHourDelivery"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        app:srcCompat="@mipmap/ic_spinner" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/button_continue"
        android:text="@string/action_continue"
        android:theme="@style/AppTheme.Button.ButtonContinue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
